--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "AbmmHasan\\Draw\\": "src/Draw"
+            "AbmmHasan\\Draw\\": "src/Draw/"
         }
     },
     "require": {
