Added Mega draw

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "abmmhasan/lucky-draw",
+    "name": "abmmhasan/game-draw",
     "description": "Generates Item and Item count for winners.",
     "type": "library",
     "license": "MIT",
